<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textImagenes"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:text="@string/tx_sonido2"
        android:textColor="#0000FF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_play" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_pause" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_stop" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonReanudar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/b_reanudar" />

</LinearLayout>